# qlsv_fastapi

./: .env  .gitignore  main.py  pyproject.toml  wget-log
src/alembic/versions/: f3653c05a431_create_table_student.py
src/api/: dependencies.py
src/api/dto/: student.py
src/api/routers/: student_router.py
src/core/common/: exceptions.py
src/core/configs/: database.py
src/core/models/: __init__.py  student.py
src/features/students/: student_service.py
src/qlsv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
