[project]
name = "qlsv"
version = "0.1.0"
description = "FastAPI authentication API"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]",
    "python-dotenv==1.0.1",
    "bcrypt==4.2.1",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.1",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "alembic==1.14.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ipython>=8.31.0",
    "httpx>=0.28.1",
]
